--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   Editando Conta
 <% end %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { method: :put, :multipart => true }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), validate: true, html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
