instalando o carriwave gem para imagens

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,9 @@
     <% else %>
       <h4>Avatar Atual</h4>
       <h4>
-        <%= image_tag(resource.avatar.url(:thumb)) %>
+        
+          <%= image_tag(resource.avatar.url) %>
+        
       </h4>
     <% end %>
 
