--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -19,7 +19,7 @@
 
           <li class="item">
             <div class="product-img">
-              <img src="<%= i.user.avatar.url(:info) %>" alt="Imagem do Usuario" class="img-circle">
+              <img src="<%= i.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
             </div>
 
             <div class="product-info">
