--- a/app/views/layouts/intranet/_mural.html.erb
+++ b/app/views/layouts/intranet/_mural.html.erb
@@ -17,7 +17,7 @@
       <% @mural.each do |m| %> 
         <!-- chat item -->
         <div class="item">
-          <img src="<%= m.user.avatar.url(:info) %>" alt="img usu" class="online">
+          <img src="<%= m.user.avatar.url(:thumb) %>" alt="img usu" class="online">
 
           <p class="message">
             <a href="#" class="name">
