--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,17 +22,15 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <% if !current_user.avatar.blank? %>
-                <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image" alt="User Image">
-              <% end %>
+              <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image" alt="User Image">
+              
               <span class="hidden-xs"><%= (current_user.name.split(" ").first).capitalize %></span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <% if !current_user.avatar.blank? %>
-                  <img src="<%= current_user.avatar.url.to_s %>" class="img-circle" alt="User Image">
-                <% end %>
+                <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="img-circle" alt="User Image">
+                
 
                 <p>
                   <%= current_user.name %>
