--- a/app/views/layouts/intranet/_projetos.html.erb
+++ b/app/views/layouts/intranet/_projetos.html.erb
@@ -65,7 +65,7 @@
 
                         <% projeto.users.each do |u| %>
                           <li>
-                            <img src="<%= u.avatar.url(:info) %>" alt="Imagem">
+                            <img src="<%= u.avatar.url(:thumb) %>" alt="Imagem">
                             <a class="users-list-name" href="#"><%= (u.name.split(" ").first).capitalize %></a>
                             <span class="users-list-date"><%= u.departamento.sigla %></span>
                           </li>      
