--- a/app/views/layouts/intranet/_mural.html.erb
+++ b/app/views/layouts/intranet/_mural.html.erb
@@ -17,8 +17,11 @@
       <% @mural.each do |m| %> 
         <!-- chat item -->
         <div class="item">
-          <img src="<%= m.user.avatar.url(:thumb) %>" alt="img usu" class="online">
-
+          <% if !m.user.avatar.blank? %>
+            <img src="<%= m.user.avatar.url(:thumb) %>" alt="img usu" class="online">
+          <% else %>
+            <img src="/assets/user-default.jpg" alt="img usu" class="online">
+          <% end %>  
           <p class="message">
             <a href="#" class="name">
               <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> <%= m.created_at.strftime("%H:%M") %></small>
