--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -4,7 +4,11 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <a href="/users/edit" class="pull-left image">
-          <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image img-circle" alt="User Image">
+          <% if !current_user.avatar.blank? %>
+            <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image img-circle" alt="User Image">
+          <% else %>
+            <img src="/assets/user-default.jpg" class="user-image img-circle" alt="User Image">
+          <% end %>
         </a>
         <div class="pull-left info">
           <p><%= (current_user.name.split(" ").first).capitalize %></p>
