--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -25,7 +25,7 @@
               <% if !current_user.avatar.blank? %>
                 <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image" alt="User Image">
               <% else %>
-                <img src="/assets/user-default.jpg" class="user-image" alt="User Image">
+                <%= image_tag('user-default.jpg', :class=>"user-image") %>
               <% end %>  
               
               <span class="hidden-xs"><%= (current_user.name.split(" ").first).capitalize %></span>
@@ -36,7 +36,7 @@
                 <% if !current_user.avatar.blank? %>
                   <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="img-circle" alt="User Image">
                 <% else %>
-                  <img src="/assets/user-default.jpg" class="img-circle" alt="User Image">
+                  <%= image_tag('user-default.jpg', :class=>"img-circle") %>
                 <% end %>    
 
                 <p>
