--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -7,7 +7,7 @@
           <% if !current_user.avatar.blank? %>
             <img src="<%= current_user.avatar.url(:thumb).to_s %>" class="user-image img-circle" alt="User Image">
           <% else %>
-            <img src="/assets/user-default.jpg" class="user-image img-circle" alt="User Image">
+            <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
           <% end %>
         </a>
         <div class="pull-left info">
