--- a/app/views/informativos/_form.html.erb
+++ b/app/views/informativos/_form.html.erb
@@ -8,10 +8,21 @@
     <%= f.input :tipo, :label=>"Selecione o Tipo de Informação", :collection=>@tipos %>    
     <%= f.input :titulo %>
     <%= f.input :informacoes, :label=>"Informação", as: :text, :input_html=>{:rows => 10} %>
+    <%= f.input :user_id, :as=>:hidden, :input_html=>{:value=>current_user.id}%>
+    <br/>  
+    <% if !@informativo.avatar.blank? %>
+      <p>Imagem Atual</p>
+      <p>
+        <img src="<%= @informativo.avatar.url(:thumb).to_s %>" class="img img-responsive" alt="Imagem">
+      </p>
+    <% else %>
+      <p>Sem Imagem</p>
+    <% end %>
+    <br/>
+    <%= f.input :avatar, as: :file, :label=>"Selecionar a Imagem", :class => 'btn-primary' %>
     <br/>
     <%= f.input :publicado %>
     <br/>
-    <%= f.input :user_id, :as=>:hidden, :input_html=>{:value=>current_user.id}%>
   </div>
 
   <br/>
