--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>I</b>SEED</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Intranet</b>SEED</span>
+      <span class="logo-lg"><b>Siscom</b>SEED</span>
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
