alterando de is para sc

--- a/app/views/intranet/index.html.erb
+++ b/app/views/intranet/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :titulo_intra do %>
 	<section class="content-header">
 	  <h1>
-	    Intranet Seed
+	    Siscom Seed
 	    <small>Seja bem-vindo</small>
 	  </h1>
 	  <ol class="breadcrumb">
