--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -11,116 +11,140 @@
   </div>
   <!-- /.box-header -->
   <div class="box-body">
-    <ul class="products-list product-list-in-box">
-      
-      <% if @informativos.any? %>
-        <% cont_i = 1 %>
-        <% @informativos.each do |i| %>  
 
-          <% if i.avatar.blank? %>
-            <li class="item">
-              <div class="product-img">
-                <% if !i.user.avatar.blank? %>
-                  <img src="<%= i.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
-                <% else %>
-                  <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
-                <% end %>
-              </div>
+    <% cont_i = 0 %>
 
-              <div class="product-info">
-                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title"><%= i.titulo %>
-                  <span class="label label-warning pull-right"><%= (i.user.name.split(" ").first).capitalize %> <i>em</i> <%= i.created_at.strftime("%d/%m/%Y %H:%M") %></span></a>
-                    <span class="description">
-                      <%= simple_format(i.informacoes.truncate(120)) %>
-                    </span>
+    <div id="carousel-example-generic3" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic3" data-slide-to="0" class="active"></li>
+        <% if @informativos.count >= 5 %>
+        	<li data-target="#carousel-example-generic3" data-slide-to="1"></li>
+        <% end %>
+        <% if @informativos.count >= 9 %>
+        	<li data-target="#carousel-example-generic3" data-slide-to="2"></li>
+        <% end %>
+      </ol>
 
-                <div class="btn-group pull-right">
-                  <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <span class="fa fa-file" aria-hidden="true"></span> Arquivos(<%= i.arquivos.count%>) <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu">
-                    <% i.arquivos.each do |a| %>
-                      &nbsp;<%= link_icone("arquivo") %><a href="<%= a.avatar %>"  download target="_blank" class=""><span class="fa fa-file" aria-hidden="true"></span> <%= a.nome %></a><br/>
-                    <% end %>
-                  </ul>
-                </div>    
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
 
-              </div>
-            </li>
-          <% else %>
-            <div class="row">
-              <div class="col-md-8">  
-                <li class="item">
-                  <div class="product-img">
-                    <% if !i.user.avatar.blank? %>
-                      <img src="<%= i.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
-                    <% else %>
-                      <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
-                    <% end %>
-                  </div>
-
-                  <div class="product-info">
-                    <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title"><%= i.titulo %>
-                      <span class="label label-warning pull-right"><%= (i.user.name.split(" ").first).capitalize %> <i>em</i> <%= i.created_at.strftime("%d/%m/%Y %H:%M") %></span></a>
-                        <span class="description">
-                          <%= simple_format(i.informacoes.truncate(120)) %>
-                        </span>
-
-                    <div class="btn-group pull-right">
-                      <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <span class="fa fa-file" aria-hidden="true"></span> Arquivos(<%= i.arquivos.count%>) <span class="caret"></span>
-                      </button>
-                      <ul class="dropdown-menu">
-                        <% i.arquivos.each do |a| %>
-                          &nbsp;<%= link_icone("arquivo") %><a href="<%= a.avatar %>"  download target="_blank" class=""><span class="fa fa-file" aria-hidden="true"></span> <%= a.nome %></a><br/>
-                        <% end %>
-                      </ul>
-                    </div>    
-
-                  </div>
-                </li>
-              </div>
-
-              <div class="col-md-4">
-                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title">
-                  <img src="<%= i.avatar.url.to_s %>" class="img img-responsive" alt="Imagem">
-                </a>
-              </div>
-            </div>  
-          <% end %>
-          
-
-          <!-- Modal -->
-            <div class="modal fade" id="myModali<%= cont_i %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title label label-info" id="myModalLabel"><%= i.titulo %></h4>
-                    <h5 class="label label-warning"><i>Por</i> <%= (i.user.name.split(" ").first).capitalize %> <i>em</i> <%= i.created_at.strftime("%d/%m/%Y %H:%M") %></h5>
-                  </div>
-                  <div class="modal-body">
-                    <% if !i.avatar.blank? %>
-                      <img src="<%= i.avatar.url.to_s %>" class="img img-responsive" alt="Imagem">
-                      <br/>
-                    <% end %>  
-                    <%= simple_format(i.informacoes) %>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <!-- Fim Modal -->
+        <div class="item active">
+        	<div class="col-md-4">
+        		<% if @informativos[0] %>
+              <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[0].titulo %>">
+    	      	  <%= image_tag(@informativos[0].avatar.url, :class=>'img-responsive center-block') %>
+              </a>
+    	      <% end %>
+          </div>
 
           <% cont_i = cont_i + 1 %>
-        <% end %>
-      <% else %>
-        Sem informativos
-      <% end %>
-      
-    </ul>
+
+          <div class="col-md-4">
+          	<% if @informativos[1] %>
+              <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[1].titulo %>">
+    	      	  <%= image_tag(@informativos[1].avatar.url, :class=>'img-responsive center-block') %>
+              </a>
+    	      <% end %>
+          </div>
+
+          <% cont_i = cont_i + 1 %>
+
+          <div class="col-md-4">
+          	<% if @informativos[2] %>
+              <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[2].titulo %>">
+    	      	  <%= image_tag(@informativos[2].avatar.url, :class=>'img-responsive center-block') %>
+              </a>
+    	      <% end %>
+          </div>
+
+        </div>
+
+        <% cont_i = cont_i + 1 %>
+
+    		<% if @informativos.count >= 4 %>
+    	    <div class="item">
+    	      <div class="col-md-4">
+    	    		<% if @informativos[3] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[3].titulo %>">
+    		      	  <%= image_tag(@informativos[3].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+            <% cont_i = cont_i + 1 %>
+
+    	      <div class="col-md-4">
+    	      	<% if @informativos[4] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[4].titulo %>">
+    		      	  <%= image_tag(@informativos[4].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+            <% cont_i = conti_i + 1 %>
+
+    	      <div class="col-md-4">
+    	      	<% if @informativos[5] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[5].titulo %>">
+    		      	  <%= image_tag(@informativos[5].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+    	    </div>
+    	  <% end %>
+
+        <% cont_i = cont_i + 1 %>
+
+    	  <% if @informativos.count >= 7 %>
+    	    <div class="item">
+    	      <div class="col-md-4">
+    	    		<% if @informativos[6] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos6[].titulo %>">
+    		      	  <%= image_tag(@informativos[6].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+            <% cont_i = cont_i + 1 %>
+
+    	      <div class="col-md-4">
+    	      	<% if @informativos[7] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[7].titulo %>">
+    		      	  <%= image_tag(@informativos[7].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+            <% cont_i = cont_i + 1 %>
+
+    	      <div class="col-md-4">
+    	      	<% if @informativos[8] %>
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[8].titulo %>">
+    		      	  <%= image_tag(@informativos[8].avatar.url, :class=>'img-responsive center-block') %>
+                </a>
+    		      <% end %>
+    	      </div>
+
+    	    </div>
+    	  <% end %>
+
+
+        <!-- Algo Aqui -->
+      </div>
+
+      <!-- Controls -->
+      <a class="left carousel-control" href="#carousel-example-generic3" role="button" data-slide="prev">
+        <span class="fa fa-arrow-left icon-prev" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#carousel-example-generic3" role="button" data-slide="next">
+        <span class="fa fa-arrow-right icon-next" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
   </div>
   <!-- /.box-body -->
   <div class="box-footer text-center">
@@ -129,3 +153,63 @@
   <!-- /.box-footer -->
 </div>
 <!-- /.box -->
+
+<% cont = 0 %>
+
+<% @informativos.each do |informativo| %>
+  <!-- Modal -->
+    <div class="modal fade" id="myModali<%= cont %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <div class="row">
+              <div class="col-xs-2">
+                <div class="product-img">
+                  <% if !informativo.user.avatar.blank? %>
+                    <img src="<%= informativo.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
+                  <% else %>
+                    <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
+                  <% end %>
+                </div>
+              </div>
+              <div class="col-xs-10">
+                <h4 class="modal-title" id="myModalLabel"><%= informativo.titulo %>
+                  <br>
+                  <small>
+                    <i>Por</i> <%= (informativo.user.name.split(" ").first).capitalize %> <i>em</i> <%= informativo.created_at.strftime("%d/%m/%Y %H:%M") %>
+                  </small>
+
+                  <div class="btn-group pull-right">
+                    <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <span class="fa fa-file" aria-hidden="true"></span> Arquivos(<%= informativo.arquivos.count%>) <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                      <% informativo.arquivos.each do |a| %>
+                        &nbsp;<%= link_icone("arquivo") %><a href="<%= a.avatar %>"  download target="_blank" class=""><span class="fa fa-file" aria-hidden="true"></span> <%= a.nome %></a><br/>
+                      <% end %>
+                    </ul>
+                  </div>
+
+
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="modal-body">
+            <% if !informativo.avatar.blank? %>
+              <img src="<%= informativo.avatar.url.to_s %>" class="img img-responsive" alt="Imagem">
+              <br/>
+            <% end %>
+            <%= simple_format(informativo.informacoes) %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  <!-- Fim Modal -->
+  <% cont = cont + 1 %>
+
+<% end %>
