--- a/app/views/intranet/lista_departamentos.html.erb
+++ b/app/views/intranet/lista_departamentos.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :sub_titulo do %>
-  IS | Lista de Departamentos
+  SC | Lista de Departamentos
 <% end %>
 
 <table id="tabela" class="display" cellspacing="0" width="100%">
