--- a/app/views/layouts/intranet/_nav.html.erb
+++ b/app/views/layouts/intranet/_nav.html.erb
@@ -3,9 +3,9 @@
     <!-- Logo -->
     <a href="/intranet/index" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>I</b>S</span>
+      <span class="logo-mini"><b>S</b>C</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Intranet</b>SEED</span>
+      <span class="logo-lg"><b>Siscom</b>SEED</span>
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
@@ -17,7 +17,7 @@
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          
+
           <!-- Control Sidebar Toggle Button -->
           <li>
             <a href="/users/sign_in"><i class="fa fa-lock"></i> Entrar</a>
