cont tava errado vamos ver agora

--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -82,7 +82,7 @@
     		      <% end %>
     	      </div>
 
-            <% cont_i = conti_i + 1 %>
+            <% cont_i = cont_i + 1 %>
 
     	      <div class="col-md-4">
     	      	<% if @informativos[5] %>
