mais erros no index

--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -101,7 +101,7 @@
     	    <div class="item">
     	      <div class="col-md-4">
     	    		<% if @informativos[6] %>
-                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos6[].titulo %>">
+                <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[6].titulo %>">
     		      	  <%= image_tag(@informativos[6].avatar.url, :class=>'img-responsive center-block') %>
                 </a>
     		      <% end %>
