--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -165,13 +165,15 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div class="row">
               <div class="col-xs-3">
-                <div class="product-img">
-                  <% if !informativo.user.avatar.blank? %>
-                    <img src="<%= informativo.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
-                  <% else %>
-                    <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
-                  <% end %>
-                </div>
+                <center>
+                  <div class="product-img">
+                    <% if !informativo.user.avatar.blank? %>
+                      <img src="<%= informativo.user.avatar.url(:thumb) %>" alt="Imagem do Usuario" class="img-circle">
+                    <% else %>
+                      <%= image_tag('user-default.jpg', :class=>"user-image img-circle") %>
+                    <% end %>
+                  </div>
+                </center>
               </div>
               <div class="col-xs-9">
                 <h4 class="modal-title" id="myModalLabel"><%= informativo.titulo %>
