--- a/app/views/layouts/intranet/_mural.html.erb
+++ b/app/views/layouts/intranet/_mural.html.erb
@@ -1,9 +1,10 @@
 <!-- Chat box -->
 <div class="box box-success">
   <div class="box-header">
-    <i class="fa fa-comments-o"></i>
+    <i class="fa fa-bullhorn" aria-hidden="true"></i>
 
-    <h3 class="box-title">Mural</h3>
+
+    <h3 class="box-title">Comunicados</h3>
 
     <div class="box-tools pull-right" data-toggle="tooltip" title="Atualizar">
       <div class="btn-group" data-toggle="btn-toggle">
@@ -12,22 +13,22 @@
     </div>
   </div>
   <div style="overflow:auto; max-height:300px; width:auto;" class="box-body chat" id="chat-box">
-    
-    <% if @mural.any? %>
-      <% @mural.each do |m| %> 
+
+    <% if @noticias_rapidas.any? %>
+      <% @noticias_rapidas.each do |m| %>
         <!-- chat item -->
         <div class="item">
           <% if !m.user.avatar.blank? %>
             <img src="<%= m.user.avatar.url(:thumb) %>" alt="img usu" class="online">
           <% else %>
             <%= image_tag('user-default.jpg', :class=>"online") %>
-          <% end %>  
+          <% end %>
           <p class="message">
             <a href="#" class="name">
-              <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> <%= m.created_at.strftime("%d/%m %H:%M") %></small>
-              <%= (m.user.name.split(" ").first).capitalize %>
+              <small class="text-muted pull-right"><%= (m.user.name.split(" ").first).capitalize %> <br/> <i class="fa fa-clock-o"></i> <%= m.created_at.strftime("%d/%m %H:%M") %></small>
+              <%= m.titulo %>
             </a>
-            <%= m.texto %>
+            <%= m.informacoes %>
           </p>
         </div>
         <!-- /.item -->
@@ -36,28 +37,6 @@
 
   </div>
   <!-- /.chat -->
-  
-  <% if current_user %>
-
-    <div class="box-footer">
-      <div class="input-group">
-        <%= simple_form_for @mu, :url=>intranet_salvar_mural_url(@mu), :method => :post do |f| %>
-          
-          <%= f.input :user_id, :as=>:hidden, :input_html=>{:value=>current_user.id}%>
-          <div class="row">
-            <div class="col-md-10">
-              <%= f.input :texto, :label=>false, as: :string, :input_html => {:maxlength => 600, :class=>"form-control", :placeholder=>"Digite a msg..."}%>
-            </div>
-            
-            <div class="col-md-2">
-              <%= f.button :submit, "Enviar", :class=>'btn btn-success' %>
-            </div>
-          </div>  
-        <% end %>
-      </div>
-    </div>
-
-  <% end %>
 
 </div>
 <!-- /.box (chat box) -->
