alterando tamanho das imagens nos informativos

--- a/app/views/layouts/intranet/_informativos.html.erb
+++ b/app/views/layouts/intranet/_informativos.html.erb
@@ -32,7 +32,7 @@
         	<div class="col-md-4">
         		<% if @informativos[0] %>
               <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[0].titulo %>">
-    	      	  <%= image_tag(@informativos[0].avatar.url, :class=>'img-responsive center-block') %>
+    	      	  <%= image_tag(@informativos[0].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img0') %>
               </a>
     	      <% end %>
           </div>
@@ -42,7 +42,7 @@
           <div class="col-md-4">
           	<% if @informativos[1] %>
               <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[1].titulo %>">
-    	      	  <%= image_tag(@informativos[1].avatar.url, :class=>'img-responsive center-block') %>
+    	      	  <%= image_tag(@informativos[1].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img1') %>
               </a>
     	      <% end %>
           </div>
@@ -52,7 +52,7 @@
           <div class="col-md-4">
           	<% if @informativos[2] %>
               <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[2].titulo %>">
-    	      	  <%= image_tag(@informativos[2].avatar.url, :class=>'img-responsive center-block') %>
+    	      	  <%= image_tag(@informativos[2].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img2') %>
               </a>
     	      <% end %>
           </div>
@@ -66,7 +66,7 @@
     	      <div class="col-md-4">
     	    		<% if @informativos[3] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[3].titulo %>">
-    		      	  <%= image_tag(@informativos[3].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[3].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img3') %>
                 </a>
     		      <% end %>
     	      </div>
@@ -76,7 +76,7 @@
     	      <div class="col-md-4">
     	      	<% if @informativos[4] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[4].titulo %>">
-    		      	  <%= image_tag(@informativos[4].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[4].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img4') %>
                 </a>
     		      <% end %>
     	      </div>
@@ -86,7 +86,7 @@
     	      <div class="col-md-4">
     	      	<% if @informativos[5] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[5].titulo %>">
-    		      	  <%= image_tag(@informativos[5].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[5].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img5') %>
                 </a>
     		      <% end %>
     	      </div>
@@ -101,7 +101,7 @@
     	      <div class="col-md-4">
     	    		<% if @informativos[6] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[6].titulo %>">
-    		      	  <%= image_tag(@informativos[6].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[6].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img6') %>
                 </a>
     		      <% end %>
     	      </div>
@@ -111,7 +111,7 @@
     	      <div class="col-md-4">
     	      	<% if @informativos[7] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[7].titulo %>">
-    		      	  <%= image_tag(@informativos[7].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[7].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img7') %>
                 </a>
     		      <% end %>
     	      </div>
@@ -121,7 +121,7 @@
     	      <div class="col-md-4">
     	      	<% if @informativos[8] %>
                 <a href="#" data-toggle="modal" data-target="#myModali<%= cont_i %>" class="product-title" title="<%= @informativos[8].titulo %>">
-    		      	  <%= image_tag(@informativos[8].avatar.url, :class=>'img-responsive center-block') %>
+    		      	  <%= image_tag(@informativos[8].avatar.url, :class=>'img-responsive center-block', :id=>'tamanho_img8') %>
                 </a>
     		      <% end %>
     	      </div>
